--- a/_posts/2018-05-24-nancy.markdown
+++ b/_posts/2018-05-24-nancy.markdown
@@ -10,4 +10,4 @@ thumbnail: nancy_th.jpg
 youtube_id: _hmGWnK8-n4
 description: Nancy Mohamed shares her story and answers all questions
 ---
-Nancy Mohamed tells the crowd her story, and answers all question in detail. We are proud of her!
+Nancy Mohamed tells the crowd her story, and answers all questions in detail. We are proud of her!
